--- a/views/layout/header.ejs
+++ b/views/layout/header.ejs
@@ -15,10 +15,10 @@
             <div class="right">
                 <div class="productCounter">
                 <a href="/user/wishlist/" class=""><i class="bi bi-heart-fill"></i></i</a>
-                <span class="wishlistCount"></span></div>
+                <span class="wishlistCount" id="wishCount"></span></div>
                 <div class="productCounter">
                 <a href="/user/cart/" class=""><i class="bi bi-bag-fill"></i></i></i</a>
-                <span class="cartCount"></span></div>
+                <span class="cartCount" id="cartCount"></span></div>
                 <span class="profileMan">
                 <a class="text-dark " data-bs-toggle="offcanvas" data-bs-target="#staticBackdrop" aria-controls="staticBackdrop"><i class="bi bi-person-circle " style="color: black; text-shadow: 1px 1px rgba(255, 255, 255, 0.321); font-size: 50px; cursor: pointer;"></i></i</a></span>
                
