--- a/views/user/404.ejs
+++ b/views/user/404.ejs
@@ -12,7 +12,7 @@
         .page_404 {
             height: 100vh;
             padding: 40px 0;
-            background: #dcdcdc;
+            background: #ffffff;
             font-family: 'Arvo', serif;
         }
 
@@ -64,7 +64,7 @@
                             </h3>
 
                             <p>The page you are looking for is not available!</p>
-                            <p class="text-center text-danger" style="word-wrap: break-word;"><%=url%> Not Found</p>
+                            <p class="text-center text-warning" style="word-wrap: break-word;"><%=url%> Not Found</p>
 
                             <a href="/user/home/" class="btn btn-danger">Go to Home</a>
                         </div>
