--- a/views/user/orderConfirmation.ejs
+++ b/views/user/orderConfirmation.ejs
@@ -1,11 +1,13 @@
 <%- include('../layout/headerHTML')-%>
+
 <link rel="stylesheet" type="text/css" href="../../public/css/orderConfirmation.css">
-</head>#231c1c
+</head>
 <body>
     <div class="containerMa" style="font-family: 'Michroma', sans-serif;">
+        <div class="cont">
         <h2 class="text-center mb-4" style="  font-family: 'Michroma', sans-serif;"><u>RARE KICK'S</u></h2>
-        <img src="../../public/images/icons8-flower-delivery-64.png" alt="Success Logo" class="success-logo">
-        <h2>Order Confirmation</h2>
+        <img src="../../public/images/1065313-200.png" alt="Success Logo" class="success-logo">
+        <h4 class="text-end">Order Confirmed!</h4>
 
         <div class="confirmation-message">
             <p>Your order has been successfully placed. Thank you for shopping with us!</p>
@@ -43,7 +45,7 @@
         </div>
         <a href="/user/home" class="mt-3 mb-5" style="display: flex; justify-content: center; text-decoration: none;"><span class="btn btn-dark rounded">Continue Shopping</span></a>
     </div>
-
+</div>
 </div>
 <script>
     // Calculate expected delivery date
