--- a/views/admin/editCategory.ejs
+++ b/views/admin/editCategory.ejs
@@ -32,7 +32,7 @@
                     <div class="row">
                         <div class="col-md-12 ">
                             <form action="/admin/editCategory?id=<%=categories._id%>" class="needs-validation" method="post">
-                                <a href="/admin/deleteCategoryCompletly?id=<%=categories._id%>" class="btn btn-danger mb-3"  id="button" >Delete</a>
+                                <a href="/admin/deleteCategoryCompletely?id=<%=categories._id%>" class="btn btn-danger mb-3"  id="button" >Delete</a>
                                 <div class="mb-4">
                                     <label for="product_name" class="form-label">Name</label>
                                     <input name="name" type="text" placeholder="Type here" class="form-control" value="<%=categories.name%>" id="product_name" /><span class="error-span text-danger">&nbsp;</span>
@@ -57,10 +57,33 @@
     <div class="alertKey">
         <% if(locals.message) { %>
           <div class="alert alert-danger alert-dismissible fade show" role="alert" style="position: absolute; right: 20px; bottom: 30px;"
-            data-bs-autohide="true" data-bs-delay="2000"> 
+            data-bs-autohide="true" data-bs-delay="2000" id="success-alert"> 
             <strong><%= message %></strong>
             <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
           </div>
+          
+          <script>
+            // Add this script to your page
+            setTimeout(function() {
+              document.getElementById('success-alert').style.display = 'none';
+            }, 2000); // Adjust the delay (in milliseconds) as needed
+          </script>
+        <% } %>      
+      </div>
+      <div class="alertKey">
+        <% if(locals.messageS) { %>
+          <div class="alert alert-success alert-dismissible fade show" role="alert" style="position: absolute; right: 20px; bottom: 30px;"
+            data-bs-autohide="true" data-bs-delay="2000" id="success-alert"> 
+            <strong><%= messageS %></strong>
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+          </div>
+      
+          <script>
+            // Add this script to your page
+            setTimeout(function() {
+              document.getElementById('success-alert').style.display = 'none';
+            }, 2000); // Adjust the delay (in milliseconds) as needed
+          </script>
         <% } %>      
       </div>
 
