--- a/views/user/editProfile.ejs
+++ b/views/user/editProfile.ejs
@@ -35,14 +35,14 @@
                   </div>
                 </div>
                 <div class="col-md-12">
-                  <label for="validationPassword" class="form-label">Conform Password</label>
+                  <label for="validationPassword" class="form-label">Password</label>
                   <div class="input-group has-validation">
                     <span class="input-group-text" id="inputGroupPrepend"><i class="bi bi-key"></i></span>
                     <input type="password" class="form-control" id="validationPassword" aria-describedby="inputGroupPrepend" name="password"  required>
                     <span class="btn rounded-pill" onclick="togglePassword()" id="passKey" style="font-size: 20px;"><i class="bi bi-eye-slash-fill"></i></span>
                     <span class="error-span">&nbsp;</span>
                     <div class="invalid-feedback">
-                      Enter A Valid Password !
+                      Enter Your Password !
                     </div>
                   </div>
                 </div>
@@ -91,8 +91,8 @@
                             return;
                         }
             
-                        if (contactValue.length < 10) {
-                            showAlert('Contact number must be at least 10 digits.');
+                        if (contactValue.length < 10||contactValue.length>12) {
+                            showAlert('Contact number must be at least 10 digits And not more than 12 digits.');
                             return;
                         }
             
