--- a/views/user/orders.ejs
+++ b/views/user/orders.ejs
@@ -45,16 +45,18 @@
                     <td class="align-middle" style="text-align: center;"><%= order.createdAt %></td>
                     <td class="align-middle" style="text-align: center;">
                       <a href="/user/orderDetailed?id=<%= order._id %>">
-                      <% if (order.status === 'Processing') { %>
-                      <p > <span class="btn py-2 px-3 btn-warning rounded-pill" style="font-family: 'Michroma', sans-serif;" ><%= order.status %></span></p>
-                  <% } else if (order.status === 'Shipped') { %>
-                      <p > <span class="btn py-2 px-3 btn-outline-success rounded-pill" style="font-family: 'Michroma', sans-serif;" ><%= order.status %></span></p>
-                  <% } else if (order.status === 'Out of Delivery') { %>
-                      <p > <span class="btn py-2 px-3 btn-success rounded-pill" style="font-family: 'Michroma', sans-serif;" ><%= order.status %></span></p>
-                  <% } else { %>
-                      <p><span  class="btn py-2 px-3 btn-danger rounded-pill" style="font-family: 'Michroma', sans-serif;" ><%= order.status %></span></p>
-                  <% } %>
-                </a>
+                        <% if (order.status === 'Processing') { %>
+                          <p > <span class="btn py-2 px-3 btn-warning rounded-pill" style="font-family: 'Michroma', sans-serif;" ><%= order.status %></span></p>
+                      <% } else if (order.status === 'Shipped') { %>
+                          <p > <span class="btn py-2 px-3 btn-success rounded-pill" style="font-family: 'Michroma', sans-serif;" ><%= order.status %></span></p>
+                      <% } else if (order.status === 'Out of Delivery') { %>
+                          <p > <span class="btn py-2 px-3 btn-success rounded-pill" style="font-family: 'Michroma', sans-serif;" ><%= order.status %></span></p>
+                      <% } else if (order.status === 'Delivered') { %>
+                        <p > <span class="btn py-2 px-3 btn-light rounded-pill" style="font-family: 'Michroma', sans-serif;" ><%= order.status %></span></p>
+                    <% } else { %>
+                          <p><span  class="btn py-2 px-3 btn-danger rounded-pill" style="font-family: 'Michroma', sans-serif;" ><%= order.status %></span></p>
+                      <% } %>
+                          </a>
                 </td>
                 </tr>
                 <%i=(i+1)%>
@@ -67,7 +69,7 @@
     </div>
     <%}%>
      <div class="footerA">
-            <p>&copy; 2023 Your Store. All rights reserved.</p>
+            <p>&copy; 2023 Rare Kicks. All rights reserved.</p>
             <h2 class="text-center mb-4" style="font-family: 'Michroma', sans-serif;"><u>RARE KICK'S</u></h2>
         </div>
     <%- include('../layout/footer')-%>
