--- a/views/user/wishlist.ejs
+++ b/views/user/wishlist.ejs
@@ -78,7 +78,7 @@
                         </div>
                     <% })} %>
                     <% if(locals.products.length===0) { %>
-                        <div class="col">
+                        <div class="col" style="border: 1px solid black; border-radius: 20px;" >
                             <p class="text-center text-danger pt-5 pb-5" style="font-size: 25px; font-family: 'Michroma', sans-serif;"><u>Your wishlist is empty!</u></p>
                         </div>
                     <% } %> 
@@ -105,10 +105,33 @@
 <div class="alertKey">
     <% if(locals.message) { %>
       <div class="alert alert-danger alert-dismissible fade show" role="alert" style="position: absolute; right: 20px; bottom: 30px;"
-        data-bs-autohide="true" data-bs-delay="2000"> 
+        data-bs-autohide="true" data-bs-delay="2000" id="success-alert"> 
         <strong><%= message %></strong>
         <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
       </div>
+      
+      <script>
+        // Add this script to your page
+        setTimeout(function() {
+          document.getElementById('success-alert').style.display = 'none';
+        }, 2000); // Adjust the delay (in milliseconds) as needed
+      </script>
+    <% } %>      
+  </div>
+  <div class="alertKey">
+    <% if(locals.messageS) { %>
+      <div class="alert alert-success alert-dismissible fade show" role="alert" style="position: absolute; right: 20px; bottom: 30px;"
+        data-bs-autohide="true" data-bs-delay="2000" id="success-alert"> 
+        <strong><%= messageS %></strong>
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+      </div>
+  
+      <script>
+        // Add this script to your page
+        setTimeout(function() {
+          document.getElementById('success-alert').style.display = 'none';
+        }, 2000); // Adjust the delay (in milliseconds) as needed
+      </script>
     <% } %>      
   </div>
         
