--- a/views/admin/orderDetailed.ejs
+++ b/views/admin/orderDetailed.ejs
@@ -32,70 +32,87 @@
     <% }); %>
     </div>
     
-    <div class="d-flex mt-3" style="justify-content: center;">
-        <% if (order.status === 'Processing') { %>
-          <div class="dropdown">
-            <button class=" btn py-2 px-3 btn-warning rounded-pill dropdown-toggle" id="statusDropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style=" cursor: pointer; font-family: 'Michroma', sans-serif;">
-              <span class="statusButton"><%= order.status %></span>
-            </button>
-            <div class="dropdown-menu" aria-labelledby="statusDropdown" style=" cursor: pointer ;">
-              <% const statuses = ['Shipped', 'Out of Delivery', 'Cancelled' ,'Delivered']; %>
-              <% statuses.forEach(status => { %>
-                <a class="dropdown-item" onclick="changeStatus('<%= status %>')"><%= status %></a>
-              <% }); %>
-            </div>
-          </div>
-          
+
+    <%if(order.status==="Delivered"||order.status==="Cancelled"||order.status==="Returned"){%>
+        <div class="d-flex mt-3" style="justify-content: center;">
+          <% if (locals?.order?.status === 'Processing') { %>
+            <p > <span class="btn py-2 px-3 btn-warning rounded-pill" style="font-family: 'Michroma', sans-serif;" ><%= order.status %></span></p>
         <% } else if (order.status === 'Shipped') { %>
-          <div class="dropdown">
-            <button class=" btn py-2 px-3 btn-success rounded-pill dropdown-toggle" id="statusDropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style=" cursor: pointer; font-family: 'Michroma', sans-serif;">
-              <span class="statusButton"><%= order.status %></span>
-            </button>
-            <div class="dropdown-menu" aria-labelledby="statusDropdown" style=" cursor: pointer;">
-              <% const statuses = ['Processing', 'Out of Delivery', 'Cancelled' ,'Delivered']; %>
-              <% statuses.forEach(status => { %>
-                <a class="dropdown-item" onclick="changeStatus('<%= status %>')"><%= status %></a>
-              <% }); %>
-            </div>
-          </div>
+            <p > <span class="btn py-2 px-3 btn-success rounded-pill" style="font-family: 'Michroma', sans-serif;" ><%= order.status %></span></p>
         <% } else if (order.status === 'Out of Delivery') { %>
-          <div class="dropdown">
-            <button class=" btn py-2 px-3 btn-info rounded-pill dropdown-toggle" id="statusDropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style=" cursor: pointer; font-family: 'Michroma', sans-serif;">
-              <span class="statusButton"><%= order.status %></span>
-            </button>
-            <div class="dropdown-menu" aria-labelledby="statusDropdown" style=" cursor: pointer;">
-              <% const statuses = ['Shipped', 'Processing', 'Cancelled' ,'Delivered']; %>
-              <% statuses.forEach(status => { %>
-                <a class="dropdown-item" onclick="changeStatus('<%= status %>')"><%= status %></a>
-              <% }); %>
-            </div>
-          </div>
-        <% } else if(order.status === 'Cancelled') { %>
-          <div class="dropdown">
-            <button class=" btn py-2 px-3 btn-danger rounded-pill dropdown-toggle" id="statusDropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style=" cursor: pointer; font-family: 'Michroma', sans-serif;">
-              <span class="statusButton"><%= order.status %></span>
-            </button>
-            <div class="dropdown-menu" aria-labelledby="statusDropdown" style=" cursor: pointer;">
-              <% const statuses = ['Shipped', 'Out of Delivery', 'Processing' ,'Delivered']; %>
-              <% statuses.forEach(status => { %>
-                <a class="dropdown-item" onclick="changeStatus('<%= status %>')"><%= status %></a>
-              <% }); %>
-            </div>
-          </div>
-        <% } else {%>
-          <div class="dropdown">
-            <button class=" btn py-2 px-3 btn-dark rounded-pill dropdown-toggle" id="statusDropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style=" cursor: pointer; font-family: 'Michroma', sans-serif;">
-              <span class="statusButton"><%= order.status %></span>
-            </button>
-            <div class="dropdown-menu" aria-labelledby="statusDropdown" style=" cursor: pointer;">
-              <% const statuses = ['Shipped', 'Out of Delivery', 'Cancelled' ,'Delivered' , 'Processing']; %>
-              <% statuses.forEach(status => { %>
-                <a class="dropdown-item" onclick="changeStatus('<%= status %>')"><%= status %></a>
-              <% }); %>
-            </div>
-          </div>
+            <p > <span class="btn py-2 px-3 btn-success rounded-pill" style="font-family: 'Michroma', sans-serif;" ><%= order.status %></span></p>
+        <% } else if (order.status === 'Delivered') { %>
+            <p><span  class="btn py-2 px-3 btn-dark rounded-pill" style="font-family: 'Michroma', sans-serif;" ><%= order.status %></span></p>
+        <% }else { %>
+          <p><span  class="btn py-2 px-3 btn-danger rounded-pill" style="font-family: 'Michroma', sans-serif;" ><%= order.status %></span></p>
+        <% } %></div>
+      <%}else {%>
+        <div class="d-flex mt-3" style="justify-content: center;">
+              <% if (order.status === 'Processing') { %>
+                <div class="dropdown">
+                  <button class=" btn py-2 px-3 btn-warning rounded-pill dropdown-toggle" id="statusDropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style=" cursor: pointer; font-family: 'Michroma', sans-serif;">
+                    <span class="statusButton"><%= order.status %></span>
+                  </button>
+                  <div class="dropdown-menu" aria-labelledby="statusDropdown" style=" cursor: pointer ;">
+                    <% const statuses = ['Shipped', 'Out of Delivery', 'Cancelled' ,'Delivered']; %>
+                    <% statuses.forEach(status => { %>
+                      <a class="dropdown-item" onclick="changeStatus('<%= status %>')"><%= status %></a>
+                    <% }); %>
+                  </div>
+                </div>
+                
+              <% } else if (order.status === 'Shipped') { %>
+                <div class="dropdown">
+                  <button class=" btn py-2 px-3 btn-success rounded-pill dropdown-toggle" id="statusDropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style=" cursor: pointer; font-family: 'Michroma', sans-serif;">
+                    <span class="statusButton"><%= order.status %></span>
+                  </button>
+                  <div class="dropdown-menu" aria-labelledby="statusDropdown" style=" cursor: pointer;">
+                    <% const statuses = ['Processing', 'Out of Delivery', 'Cancelled' ,'Delivered']; %>
+                    <% statuses.forEach(status => { %>
+                      <a class="dropdown-item" onclick="changeStatus('<%= status %>')"><%= status %></a>
+                    <% }); %>
+                  </div>
+                </div>
+              <% } else if (order.status === 'Out of Delivery') { %>
+                <div class="dropdown">
+                  <button class=" btn py-2 px-3 btn-info rounded-pill dropdown-toggle" id="statusDropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style=" cursor: pointer; font-family: 'Michroma', sans-serif;">
+                    <span class="statusButton"><%= order.status %></span>
+                  </button>
+                  <div class="dropdown-menu" aria-labelledby="statusDropdown" style=" cursor: pointer;">
+                    <% const statuses = ['Shipped', 'Processing', 'Cancelled' ,'Delivered']; %>
+                    <% statuses.forEach(status => { %>
+                      <a class="dropdown-item" onclick="changeStatus('<%= status %>')"><%= status %></a>
+                    <% }); %>
+                  </div>
+                </div>
+              <% } else if(order.status === 'Cancelled') { %>
+                <div class="dropdown">
+                  <button class=" btn py-2 px-3 btn-danger rounded-pill dropdown-toggle" id="statusDropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style=" cursor: pointer; font-family: 'Michroma', sans-serif;">
+                    <span class="statusButton"><%= order.status %></span>
+                  </button>
+                  <div class="dropdown-menu" aria-labelledby="statusDropdown" style=" cursor: pointer;">
+                    <% const statuses = ['Shipped', 'Out of Delivery', 'Processing' ,'Delivered']; %>
+                    <% statuses.forEach(status => { %>
+                      <a class="dropdown-item" onclick="changeStatus('<%= status %>')"><%= status %></a>
+                    <% }); %>
+                  </div>
+                </div>
+              <% } else {%>
+                <div class="dropdown">
+                  <button class=" btn py-2 px-3 btn-dark rounded-pill dropdown-toggle" id="statusDropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style=" cursor: pointer; font-family: 'Michroma', sans-serif;">
+                    <span class="statusButton"><%= order.status %></span>
+                  </button>
+                  <div class="dropdown-menu" aria-labelledby="statusDropdown" style=" cursor: pointer;">
+                    <% const statuses = ['Shipped', 'Out of Delivery', 'Cancelled' ,'Delivered' , 'Processing']; %>
+                    <% statuses.forEach(status => { %>
+                      <a class="dropdown-item" onclick="changeStatus('<%= status %>')"><%= status %></a>
+                    <% }); %>
+                  </div>
+                </div>
+              <%}%>
+              </div>
         <%}%>
-        </div>
+  
 
 
     <div class="container mb-3 mt-2" style="background-color: #212529; padding: 10px; border-radius: 20px; min-width: 370px;">
@@ -161,10 +178,17 @@
                   <td class="text-danger">&#x20B9  -<%= discount.toFixed(2) %></td>
                 </tr>
                 <%}%>
-              <tr>
-                <th scope="row"><h5  style="font-family: 'Michroma', sans-serif;">Total Paid:</h5></th>
-                <td class="text-danger"><h2>&#x20B9  <%= order.payment.amount.toFixed(2) %></h2></td>
-              </tr>
+                <%if(order.payment.method==="online payment"){%>
+                  <tr>
+                    <th scope="row"><h5  style="font-family: 'Michroma', sans-serif;">Total Paid:</h5></th>
+                    <td class="text-danger"><h2>&#x20B9  <%= order.payment.amount.toFixed(2) %></h2></td>
+                  </tr>
+                  <%}else{%>
+                    <tr>
+                      <th scope="row"><h5  style="font-family: 'Michroma', sans-serif;">Total :</h5></th>
+                      <td class="text-danger"><h2>&#x20B9  <%= order.payment.amount.toFixed(2) %></h2></td>
+                    </tr>
+                    <%}%>
             </tbody>
           </table>
           <div class="d-flex justify-content-end"><a class="btn btn-danger rounded-pill me-2" href="/admin/editOrders?id=<%=order._id%>">edit</a>
