--- a/views/user/checkOut.ejs
+++ b/views/user/checkOut.ejs
@@ -5,28 +5,15 @@
 </head>
 <body>
     <%- include('../layout/header') %>
+    <div class="container d-flex" style="justify-content: center; align-items: center;">
+        <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
+    </div>
     <div class="container">
         <div class="d-flex" style="justify-content: space-between; align-items: center;">
             <h2 class="text mb-4" style="margin-top: 20px;  font-family: 'Michroma', sans-serif;"><u>Check Out</u></h2>
         <a href="/user/cart/" class="btn btn-dark rounded"><h4 style="  font-family: 'Michroma', sans-serif;">Go To Cart</h4></a>
         </div>
-        <% if (total > 20000) { %>
-            <div class="alert alert-success" role="alert">
-                Enjoy a whopping 20% discount on your total purchase. Limited time offer!
-            </div>
-        <% } else if (total > 15000) { %>
-            <div class="alert alert-success" role="alert">
-                Hurry! Get 15% off on your total purchase. Discount applied at checkout.
-            </div>
-        <% } else if (total >= 10000) { %>
-            <div class="alert alert-danger" role="alert">
-                Add &#x20B9  <%= 15000 - total %> more to get 10% off on your total purchase.
-            </div>
-        <% } else if (total > 0) { %>
-            <div class="alert alert-danger" role="alert">
-                Add &#x20B9 <%= 15000 - total %> more to get 10% off or &#x20B9 <%= 20000 - total %> more to get 20% off on your total purchase.
-            </div>
-        <% } %>
+       
     </div>
     <div class="container mb-2" style="font-family: 'Michroma', sans-serif;">
         <div class="row d-flex" style="justify-content: center;">
@@ -156,7 +143,7 @@
                     <td>₹ <%= total %></td>
                 </tr>
             
-                <% if (total >= 20000) { %>
+                <!-- <% if (total >= 20000) { %>
                     <tr>
                         <td style="font-weight: bold;">Discount</td>
                         <td class="ps-2">-₹ <%= (total * 20 / 100).toFixed(2) %></td>
@@ -166,7 +153,7 @@
                         <td style="font-weight: bold;">Discount</td>
                         <td class="ps-2">-₹ <%= (total * 10 / 100).toFixed(2) %></td>
                     </tr>
-                <% } %>
+                <% } %> -->
             
                 <tr>
                     <td>Delivery Charges</td>
@@ -186,7 +173,7 @@
 
             <% if(locals.products.length!==0) { %>
                 <div class="container d-flex flex-wrap justify-content-center mt-5 mb-5" style="gap: 10px;">
-                    <a href="/user/checkOut/" class="btn btn-dark d-flex flex-column justify-content-center mt-4 pt-3 pb-3 ps-4 pe-4" style="width: fit-content;">
+                    <a  id="payNowButton" class="btn btn-dark d-flex flex-column justify-content-center mt-4 pt-3 pb-3 ps-4 pe-4" style="width: fit-content;">
                         <h3 style="font-family: 'Michroma', sans-serif; margin-bottom: 5px;">Total : <span class="text-danger"> &#x20B9 </span><span  class="totalPrice" style="color: red; letter-spacing: 2px;"><%=locals?.grandTotal%></span><span style="color: red; letter-spacing: 2px;">.00</span></h3>
                         <h4 style="font-family: 'Michroma', sans-serif; margin: 0; border-top: 4px dashed rgb(205, 205, 205);">Pay Now</h4>
                     </a>
@@ -203,6 +190,95 @@
 </div>
 
 </div>
+
+
+
+
+<script>
+    const payNowButton=document.getElementById('payNowButton');
+    payNowButton.addEventListener('click',()=>{
+        const settings = {
+                "url": "/user/placeOrderOnline",
+                "method": "POST",
+                "timeout": 0,
+                "headers": {
+                    "Content-Type": "application/json"
+                }
+            };
+
+            // Creates new orderId every time
+            $.ajax(settings).done(function (response) {
+                const orderId= response.orderId;
+                const keyId= response.keyId;
+                const razorpayorder=response.razorpayorder;
+                var options = {
+                "key": keyId, 
+                "amount": "<%=locals?.grandTotal%>",
+                "currency": "INR",
+                "name": "Rare Kicks",
+                "description": "Payment for the order ",
+                "image": "../../public/images/kn (1).png",
+                "order_id": orderId,
+                "handler": function (response) {
+                        // Success
+
+                        // Send data to the backend
+                        var paymentData = {
+                            paymentId: response.razorpay_payment_id,
+                            orderId: response.razorpay_order_id,
+                            signature: response.razorpay_signature,
+                            razorpayorder:razorpayorder
+                        };
+
+                        $.ajax({
+                            url: "/user/confirmOrderOnline/",
+                            method: "post",
+                            contentType: "application/json",
+                            data: JSON.stringify(paymentData),
+                            success: function (backendResponse) {
+                                if(backendResponse.orderId){
+                                    showSuccess("Order Placed SuccessFully")
+                                    console.log(backendResponse.orderId);
+                                    window.location.href = '/user/showConfirmOrder?id='+backendResponse.orderId;
+                                }else if(backendResponse.response===false){
+                                    showAlert("Order Not Placed!")
+                                }
+                            },
+                            error: function (error) {
+                                showAlert("Error")
+                                console.error("Error sending data to the backend:", error);
+                            }
+                        });
+                    },
+
+                "prefill": {
+                    "name": "<%= address?.name%>",
+                    "email": "<%= email %>",
+                    "contact": "<%= address?.contact %>"
+                },
+               
+                "theme": {
+                    "color": "#000000" 
+                }
+            };
+
+            var rzp1 = new Razorpay(options);
+
+            rzp1.on('payment.failed', function (response){
+                showAlert("Payment Cancelled")
+            });
+
+            rzp1.open();
+            e.preventDefault();
+            });
+    })
+</script>
+
+
+
+
+
+
 
 <script>
     // Calculate expected delivery date
